# pepper_controller_server

./: CMakeLists.txt  README.md  package.xml
config/: pepper_rhand_compliant.yaml  pepper_rhand_position_stiffness.yaml
include/pepper_controller_server/: compliant_controller.h  position_stiffness_controller.h
launch/: pepper_controller_server.launch
plugins/: compliant_controller_plugins.xml  position_stiffness_controller_plugins.xml
src/: compliant_controller.cpp  position_stiffness_controller.cpp
srv/: JointTarget.srv
test/: position_client.py
