<?xml version="1.0"?>
<package format="2">
  <name>pepper_controller_server</name>
  <version>1.0.0</version>
  <description>Custom Controller Server Implementations using the ROS control interface</description>
  <license>Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International</license>
  
  <maintainer email="vignesh.prasad@tu-darmstadt.de">Vignesh Prasad</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rbdl</depend>
  <depend>roscpp</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>pluginlib</depend>
  <depend>trajectory_msgs</depend>
  <depend>message_generation</depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <controller_interface plugin="${prefix}/plugins/position_stiffness_controller_plugins.xml" />
    <controller_interface plugin="${prefix}/plugins/compliant_controller_plugins.xml" />
  </export>

</package>
